--- a/code/meson.build
+++ b/code/meson.build
@@ -5,7 +5,7 @@ deps = [
 dir = include_directories('.')
 code = files('app.c')
 
-executable('app',
+executable('fossil-dsl',
     sources: ['main.c', code],
     include_directories: dir,
     dependencies: deps,
